# twse-codes

./: .env  .gitignore  LICENSE  README.md  codes.csv  codes.py  pyproject.toml  requirement.txt  requirements.txt
twse_codes/: __init__.py  codes.py
