[tool.poetry]
name = "twse-codes"
version = "0.1.0"
description = "fetch available codes from TWSE"
authors = ["Tsui Ho Ming <fighterming@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "twse_codes" }]
[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
